keycloack-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    name: keycloak
spec:
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30100
      name: "http"
    - port: 8443
      targetPort: 8443
      nodePort: 30443
      name: "https"    
  selector:
    app: keycloak 
  type: NodePort
